Implementado delete de usuário, preciso apenas nessa parte de usuários arrumar erro 415 para editar usuário e arrumar o problema do icon para mostrar o olhinho na senha

--- a/ifac_si_app/src/app/component/admin-view/admin-view.component.html
+++ b/ifac_si_app/src/app/component/admin-view/admin-view.component.html
@@ -85,6 +85,9 @@
                         <button (click)="startEditing(usuario)" class="edit-btn" title="Editar usuário">
                             <i class="fas fa-pencil-alt"></i>
                         </button>
+                        <button (click)="deleteUser(usuario.id)" class="edit-btn" title="Editar usuário">
+                            <i class="fas fa-trash-alt"></i>
+                        </button>
                     </ng-template>
                 </td>
             </tr>
