--- a/ifac_si_app/src/app/component/course/course.component.html
+++ b/ifac_si_app/src/app/component/course/course.component.html
@@ -3,14 +3,14 @@
         <img src="../../../assets/images/spi.png" alt="Logo SPI IFAC" class="logo-curso">    
     </header>
 
-        <div class="titulo-curso">
-            <!-- <h1>Tecnologia em Sistemas para Internet</h1>
-            <h2>Instituto Federal do Acre - Campus Rio Branco</h2> -->
-            <div class="badges">
-                <span class="badge">Superior Tecnológico</span>
-                <span class="badge">Duração: 3 anos</span>
-            </div>
+    <div class="titulo-curso">
+        <h1>Tecnologia em Sistemas para Internet</h1>
+        <h2>Instituto Federal do Acre - Campus Rio Branco</h2>
+        <div class="badges">
+            <span class="badge">Superior Tecnológico</span>
+            <span class="badge">Duração: 3 anos</span>
         </div>
+    </div>
 
     <section class="info-cards">
         <div class="card">
