--- a/ifac_si_app/src/app/component/course/course.component.css
+++ b/ifac_si_app/src/app/component/course/course.component.css
@@ -100,16 +100,23 @@ div#dados_curso a {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 30px;
+    margin: 30px 0;
     background-color: #f8f8f8;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    overflow: hidden;
+}
+
+div.titulo-curso {
+    margin: 30px 0 20px 0;
 }
 
 .logo-curso{
+    max-width: 100%;
+    height: auto;
     max-height: 150px;
-    display: flex;
+    object-fit: contain;
 }
 
 .badges {
@@ -160,9 +167,19 @@ div#dados_curso a {
   
 .section-title {
     color: #333;
-    border-bottom: 2px solid #2c8c3c;
+    position: relative;
     padding-bottom: 10px;
     margin-top: 0;
+}
+
+.section-title::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(to right, #2c8c3c, blueviolet);
 }
   
 .text-content p {
@@ -207,13 +224,13 @@ div#dados_curso a {
 .area h4 {
     margin-top: 0;
     margin-bottom: 8px;
-    color: #333;
+    color: #141414;
 }
   
 .area p {
     margin: 0;
     font-size: 14px;
-    color: #666;
+    color: #302f2f;
 }
   
   /* Corpo docente */
