--- a/ifac_si_app/src/app/component/pagination-handle/pagination-handle.component.html
+++ b/ifac_si_app/src/app/component/pagination-handle/pagination-handle.component.html
@@ -1,16 +1,27 @@
 <nav>
-    <ul>
+    <ul *ngFor="let pagina of listarPaginas()">
         <li>
             <a href="javascript:void(0)"
                (click)="mudarPagina(0)">Primeira</a>
         </li>
-        <li *ngFor="let pagina of listarPaginas()">
+        <li>
+            <button (click)="mudarPagina(pagina - 1)">
+                <i class="bi bi-chevron-double-left"></i>
+            </button>
+        </li>
+        <li>
             <a href="javascript:void(0)"
                (click)="mudarPagina(pagina)">{{pagina + 1}}</a>
+        </li>
+        <li>
+            <button (click)="mudarPagina(pagina + 1)">
+                <i class="bi bi-chevron-double-right"></i>
+            </button>
         </li>
         <li>
             <a href="javascript:void(0)"
                (click)="mudarPagina(totalPaginas - 1)">Última</a>
         </li>
+
     </ul>
 </nav>
