--- a/ifac_si_app/src/app/component/pagination-handle/pagination-handle.component.html
+++ b/ifac_si_app/src/app/component/pagination-handle/pagination-handle.component.html
@@ -9,9 +9,9 @@
                 <i class="bi bi-chevron-double-left"></i>
             </button>
         </li>
-        <li>
-            <a href="javascript:void(0)"
-               (click)="mudarPagina(pagina)">{{pagina + 1}}</a>
+        <li id="paginas">
+            <button [class.ativo]="pagina === paginaAtual"
+               (click)="mudarPagina(pagina)">{{pagina + 1}}</button>
         </li>
         <li>
             <button (click)="mudarPagina(pagina + 1)">
