Paginação funcionando aparentmente

--- a/ifac_si_app/src/app/component/filters/filters.component.css
+++ b/ifac_si_app/src/app/component/filters/filters.component.css
@@ -61,6 +61,7 @@ div#flex-container-filter {
 
 .dropdown-content p {
     /* color: black; */
+    cursor: pointer;
     padding: 12px 16px;
     display: block;
     font-size: 16px;
