--- a/ifac_si_app/src/app/component/pagination-handle/pagination-handle.component.html
+++ b/ifac_si_app/src/app/component/pagination-handle/pagination-handle.component.html
@@ -1,20 +1,20 @@
 <nav>
-    <ul *ngFor="let pagina of listarPaginas()">
+    <ul>
         <li>
             <a href="javascript:void(0)"
                (click)="mudarPagina(0)">Primeira</a>
         </li>
         <li>
-            <button (click)="mudarPagina(pagina - 1)">
+            <button (click)="mudarPagina(paginaAtual - 1)" [disabled]="paginaAtual === 0">
                 <i class="bi bi-chevron-double-left"></i>
             </button>
         </li>
-        <li id="paginas">
+        <li id="paginas" *ngFor="let pagina of listarPaginas()">
             <button [class.ativo]="pagina === paginaAtual"
-               (click)="mudarPagina(pagina)">{{pagina + 1}}</button>
+                (click)="mudarPagina(pagina)">{{pagina + 1}}</button>
         </li>
         <li>
-            <button (click)="mudarPagina(pagina + 1)">
+            <button (click)="mudarPagina(paginaAtual + 1)" [disabled]="paginaAtual === totalPaginas - 1">
                 <i class="bi bi-chevron-double-right"></i>
             </button>
         </li>
@@ -22,6 +22,5 @@
             <a href="javascript:void(0)"
                (click)="mudarPagina(totalPaginas - 1)">Última</a>
         </li>
-
     </ul>
 </nav>
