--- a/ifac_si_app/src/app/component/pagination-handle/pagination-handle.component.css
+++ b/ifac_si_app/src/app/component/pagination-handle/pagination-handle.component.css
@@ -20,7 +20,10 @@ select {
 }
 
 nav {
-
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     ul {
         display: flex;
         justify-content: center;
