--- a/ifac_si_app/src/app/component/filters/filters.component.css
+++ b/ifac_si_app/src/app/component/filters/filters.component.css
@@ -90,7 +90,11 @@ div#flex-container-filter {
     color: white;
 }
 
-
+app-ordination {
+    display: inline-flex;
+    align-items: center;
+    margin-top: 30px; /* Para alinhar com os outros botões */
+  }
 /* Para telas pequenas (menor que 600px)
 @media (max-width: 600px) {
     button {
