--- a/ifac_si_app/src/app/component/pagination-handle/pagination-handle.component.css
+++ b/ifac_si_app/src/app/component/pagination-handle/pagination-handle.component.css
@@ -1,6 +1,6 @@
-nav, nav *, nav:hover {
+/* nav, nav *, nav:hover {
     all: revert;
-}
+} */
 
 :host {
     display: flex;
@@ -77,6 +77,9 @@ nav li#paginas button.ativo {
     line-height: 40px; */
 }
 
-li i {
-    font-weight: bold;
-}
+.bi-chevron-double-left, .bi-chevron-double-right {
+    font-size: 20px; /* Aumenta o tamanho */
+    font-weight: bolder; /* Torna o ícone mais grosso, se disponível */
+    -webkit-text-stroke: 1px; /* Adiciona stroke nos navegadores webkit */
+    text-shadow: 0 0 1px black; /* Adiciona um efeito de sombra para parecer mais grosso */
+  }
