--- a/ifac_si_app/src/app/component/filters/filters.component.html
+++ b/ifac_si_app/src/app/component/filters/filters.component.html
@@ -33,5 +33,5 @@
             </p>
         </div>
     </div>
-    <app-ordination></app-ordination>
+    <app-ordination (ordemSelecionada)="atualizarOrdenacao($event)"></app-ordination>
 </div>
