--- a/ifac_si_app/src/app/component/ordination/ordination.component.html
+++ b/ifac_si_app/src/app/component/ordination/ordination.component.html
@@ -1,6 +1,6 @@
 <div>
     <label for="ordination">Ordernar por:</label>
-    <select id="ordination">
+    <select #selectOrdenation id="ordination" (change)="ordenarLista(selectOrdenation.value)">
         <option value="asc">A-Z</option>
         <option value="desc">Z-A</option>
     </select>
