--- a/ifac_si_app/src/app/component/posts-app/posts-app.component.html
+++ b/ifac_si_app/src/app/component/posts-app/posts-app.component.html
@@ -2,7 +2,8 @@
     <app-filters
     (catFilter)="getCategoria($event)"
     (tagFilter)="getByTag($event)"
-    (nonSelectFilter)="getAll()"></app-filters>
+    (nonSelectFilter)="getAll()"
+    (ordemMudou)="atualizarOrdem($event)"></app-filters>
     <div *ngIf="show">
         <app-delete-form (cancelForm)="showDelete()" (confirmForm)="deletePost()"></app-delete-form>
     </div>
