Adicionando edição em massa de usuários

--- a/ifac_si_app/src/app/component/admin-view/admin-view.component.html
+++ b/ifac_si_app/src/app/component/admin-view/admin-view.component.html
@@ -10,6 +10,20 @@
         <button (click)="deleteUsers(selectedUsers)" class="edit-btn" title="Deletar usuário">
             <i class="fas fa-trash-alt"></i>
         </button>
+        <ng-container *ngIf="!batchEditing; else editarUsuarioBatchTpl">
+            <button (click)="startBatchEditing()" class="edit-btn" title="Editar usuários selecionados">
+                <i class="fas fa-pencil-alt"></i>
+            </button>
+        </ng-container>
+        
+        <ng-template #editarUsuarioBatchTpl>
+            <button (click)="saveBatchEdit()" class="save-btn" title="Salvar alteração">
+                <i class="fas fa-save"></i>
+            </button>
+            <button (click)="cancelBatchEdit()" class="cancel-btn" title="Cancelar edição">
+                <i class="fas fa-times"></i>
+            </button>
+        </ng-template>
     </div>
     <div>
         <button>Todos os usuários <i class="bi bi-chevron-down"></i></button>
@@ -31,7 +45,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let usuario of usuarios">
+            <tr *ngFor="let usuario of usuarios" [class.in-batch-edit]="isUserInBatchEdit(usuario.id)">
             <td>
                 <input 
                 type="checkbox" 
@@ -40,10 +54,11 @@
               >
             </td>
                 <td>
-                    <ng-container *ngIf="editingUser?.id === usuario.id; else displayUser">
+                    <ng-container *ngIf="editingUser?.id === usuario.id || isUserInBatchEdit(usuario.id); else displayUser">
                         <input 
                           type="text" 
-                          [(ngModel)]="tempData.nomeUsuario" 
+                          [ngModel]="isUserInBatchEdit(usuario.id) ? getBatchEditData(usuario.id).nomeUsuario : tempData.nomeUsuario" 
+                          (ngModelChange)="isUserInBatchEdit(usuario.id) ? batchEditData[usuario.id].nomeUsuario = $event : tempData.nomeUsuario = $event"
                           class="edit-input"
                         >
                     </ng-container>
@@ -52,10 +67,11 @@
                     </ng-template>
                 </td>
                 <td>
-                    <ng-container *ngIf="editingUser?.id === usuario.id; else displayEmail">
+                    <ng-container *ngIf="editingUser?.id === usuario.id || isUserInBatchEdit(usuario.id); else displayEmail">
                         <input 
                           type="text" 
-                          [(ngModel)]="tempData.email" 
+                          [ngModel]="isUserInBatchEdit(usuario.id) ? getBatchEditData(usuario.id).email : tempData.email" 
+                          (ngModelChange)="isUserInBatchEdit(usuario.id) ? batchEditData[usuario.id].email = $event : tempData.email = $event"
                           class="edit-input"
                         >
                     </ng-container>
@@ -64,8 +80,10 @@
                     </ng-template>
                 </td>
                 <td>
-                    <ng-container *ngIf="editingUser?.id === usuario.id; else displayCargo">
-                        <select [(ngModel)]="tempData.cargo" class="edit-select">
+                    <ng-container *ngIf="editingUser?.id === usuario.id || isUserInBatchEdit(usuario.id); else displayCargo">
+                        <select [ngModel]="isUserInBatchEdit(usuario.id) ? getBatchEditData(usuario.id).cargo : tempData.cargo"
+                        (ngModelChange)="isUserInBatchEdit(usuario.id) ? batchEditData[usuario.id].cargo = $event : tempData.cargo = $event" 
+                        class="edit-select">
                         <option value="AUTOR">AUTOR</option>
                         <option value="EDITOR">EDITOR</option>
                         <option value="ADMIN">ADMIN</option>
@@ -76,7 +94,7 @@
                     </ng-template>
                 </td>
                 <td>
-                    <ng-container *ngIf="editingUser?.id === usuario.id; else editButton">
+                    <ng-container *ngIf="editingUser?.id === usuario.id  && !batchEditing; else editButton">
                         <button (click)="saveEdit(usuario)" class="save-btn" title="Salvar alteração">
                         <i class="fas fa-save"></i>
                         </button>
@@ -85,10 +103,10 @@
                         </button>
                     </ng-container>
                     <ng-template #editButton>
-                        <button (click)="startEditing(usuario)" class="edit-btn" title="Editar usuário">
+                        <button (click)="startEditing(usuario)" class="edit-btn" title="Editar usuário" *ngIf="!batchEditing">
                             <i class="fas fa-pencil-alt"></i>
                         </button>
-                        <button (click)="deleteUser(usuario.id)" class="edit-btn" title="Deletar usuário">
+                        <button (click)="deleteUser(usuario.id)" class="edit-btn" title="Deletar usuário" *ngIf="!batchEditing">
                             <i class="fas fa-trash-alt"></i>
                         </button>
                     </ng-template>
