--- a/ifac_si_app/src/app/component/user-form/user-form.component.css
+++ b/ifac_si_app/src/app/component/user-form/user-form.component.css
@@ -50,6 +50,8 @@ form select, form input:not(form > div > input){
     border-radius: 4px;
     border: 0;
     margin-bottom: 15px;
+    width: 100%; /* Garante que os inputs ocupem toda a largura disponível */
+    box-sizing: border-box;
 }
 
 input[type="submit"], input[type="button"] {
@@ -100,4 +102,31 @@ input[type="text"] ~ .fa-eye-slash {
 input[type="text"] ~ .fa-eye {
   display: block;
   color: #000;
+}
+
+/* Media queries para responsividade */
+@media screen and (max-width: 768px) {
+    .popUp {
+        width: 50%;
+        height: auto;
+        min-height: 60%;
+        padding: 15px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .popUp {
+        width: 85%;
+        height: auto;
+        min-height: 50%;
+    }
+    
+    form > div {
+        flex-direction: column;
+        gap: 10px;
+    }
+    
+    input[type="submit"], input[type="button"] {
+        width: 100%;
+    }
 }
