--- a/ifac_si_app/src/app/component/user-form/user-form.component.css
+++ b/ifac_si_app/src/app/component/user-form/user-form.component.css
@@ -70,38 +70,40 @@ form select option:hover {
     color: aliceblue;
 }
 
-.toggle-password {
-    /* position: absolute; */
+/* CSS para posicionar o ícone de senha */
+.password-container {
+    position: relative;
+    width: 100%;
+    margin-bottom: 15px;
+}
+  
+.password-container input {
+    width: 100%;
+    border-radius: 4px;
+    border: 0;
+    padding-right: 35px; /* espaço para o ícone */
+    box-sizing: border-box;
+}
+  
+.password-toggle {
+    position: absolute;
     right: 10px;
     top: 50%;
-    transform: translateY(-30px);;
+    transform: translateY(-50%);
     cursor: pointer;
-    color: #000; /* cor preta para garantir contraste com o fundo branco */
+    color: #333; /* cor mais escura para melhor visibilidade em fundo claro */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
 }
-
-input[type="password"] {
-    padding-right: 2.5em; /* adiciona espaço para o ícone de olho */
-}
-
-/* Mudança de ícone ao clicar */
-.fa-eye {
-  display: none;
-  color: #000;
-}
-
-.fa-eye-slash {
-  display: block;
-  color: #000;
-}
-
-input[type="text"] ~ .fa-eye-slash {
-  display: none;
-  color: #000;
-}
-
-input[type="text"] ~ .fa-eye {
-  display: block;
-  color: #000;
+  
+  /* Ajustes para os ícones do Bootstrap */
+.bi-eye, .bi-eye-slash {
+    font-weight: 900;
+    font-size: 16px;
+    color: rgb(0, 0, 0);
+    -webkit-text-stroke: 1px;
 }
 
 /* Media queries para responsividade */
