Arrumando espaço para input

--- a/ifac_si_app/src/app/component/login/login.component.css
+++ b/ifac_si_app/src/app/component/login/login.component.css
@@ -57,6 +57,11 @@ input::placeholder {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+input:not(:focus):not(:placeholder-shown) {
+    padding-left: 10px; /* Ajuste este valor conforme necessário */
+    transition: padding 0.3s; /* Para uma transição suave */
+}
+
 input:focus {
     padding-left: 10px;
 }
