Adicionando métodos no menu para logout e relacionando login do service para logar usuário

--- a/ifac_si_app/src/app/component/login/login.component.html
+++ b/ifac_si_app/src/app/component/login/login.component.html
@@ -1,5 +1,5 @@
 <div #formDiv>
-    <form (submit)="save()" #form="ngForm">
+    <form (submit)="login()" #form="ngForm">
         <img src="../../../assets/images/logo-login.svg" alt="ifac.si logo">
         <h4>ADMINISTRATIVO</h4>
 
