--- a/ifac_si_app/src/app/component/menu-app/menu-app.component.html
+++ b/ifac_si_app/src/app/component/menu-app/menu-app.component.html
@@ -21,7 +21,7 @@
         <div id="subMenu" class="flex">
             <ul>
                 <li><i class="bi bi-search"></i>Busca</li>
-                <li><i class="bi bi-box-arrow-right"></i>Sair</li>
+                <li (click)="logout()"><i class="bi bi-box-arrow-right"></i>Sair</li>
             </ul>
         </div>
     </div>
