Limpando algumas coisas

--- a/ifac_si_app/src/app/component/menu-app/menu-app.component.html
+++ b/ifac_si_app/src/app/component/menu-app/menu-app.component.html
@@ -25,5 +25,5 @@
             </ul>
         </div>
     </div>
-    <button (click)="mudarUsuario()">Usuário</button>
+    <!-- <button (click)="mudarUsuario()">Usuário</button> -->
 </nav>
