Editar apenas as tags antes de salvar, após salvar apenas poderá ser deletado

--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -172,7 +172,7 @@
                                 <p *ngFor="let tag of tagsList">
                                     {{ tag.nome }} 
                                     <i class="bi bi-x" (click)="removeTag(tag.tempId)"></i>
-                                    <i class="bi bi-pencil me-2" (click)="editTag(tag)"></i>
+                                    <i class="bi bi-pencil me-2" (click)="editTag(tag)" *ngIf="tag.id == null"></i>
                                 </p>
                             </div>
                         </div>
