Adicionando restrição de edição na tela de visualização de posts. Apenas quem é dono daquele post ou é editor, poderá visualizar as opções de deleção e edição

--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -189,7 +189,7 @@
                                 <p *ngFor="let tagP of tagsOptions">
                                     {{ tagP.nome }} 
                                     <!-- <i class="bi bi-x" (click)="removeTag(tag.tempId)"></i> -->
-                                    <i class="bi bi-pencil me-2" (click)="addTagList(tagP)"></i>
+                                    <i class="bi bi-plus-circle" (click)="addTagList(tagP)"></i>
                                 </p>
                             </div>
                         </div>
