--- a/ifac_si_app/src/app/component/posts-app/posts-app.component.html
+++ b/ifac_si_app/src/app/component/posts-app/posts-app.component.html
@@ -19,7 +19,7 @@
                             <img *ngIf="!post.imagemCapa" src="../../../assets/images/no-photo.png" alt="Imagem indisponível">
                         </div>
                     </div>
-                    <div id="postAction" #postAction>
+                    <div id="postAction" #postAction *ngIf="post.usuario?.id == usuario.id  || usuario.cargo == 'EDITOR'">
                         <button #deleteButton [attr.data-post-id]="post.id"><i class="bi bi-trash3" style="font-weight: bold;"></i></button>
                         <button #editButton [attr.data-post-id]="post.id"><i class="bi bi-pencil-square" style="font-weight: bold;"></i></button>
                     </div>
