Visualização de nome de posts na tela de visualização, apenas por editores

--- a/ifac_si_app/src/app/component/posts-app/posts-app.component.html
+++ b/ifac_si_app/src/app/component/posts-app/posts-app.component.html
@@ -27,6 +27,7 @@
                 <div class="postData">
                     <p> {{post.titulo}} </p>
                     <p> {{post.data | date: 'dd/MM/yyyy'}} </p>
+                    <p *ngIf="usuario.cargo =='EDITOR'"> {{post.usuario?.nomeUsuario}} </p>
                 </div>
             </div>
         </div>
