Opções de tags funcionando, adiciona a lista do post e remove das opções cadastradas, mas também remove da lista de tags do post e adiciona a lista de opções novamente

--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.html
@@ -171,7 +171,7 @@
                             <div #tagsApp class="dropdown-content tags-scroll" id="tag" *ngIf="filtersT">
                                 <p *ngFor="let tag of tagsList">
                                     {{ tag.nome }} 
-                                    <i class="bi bi-x" (click)="removeTag(tag.tempId)"></i>
+                                    <i class="bi bi-x" (click)="removeTag(tag)"></i>
                                     <i class="bi bi-pencil me-2" (click)="editTag(tag)" *ngIf="tag.id == null"></i>
                                 </p>
                             </div>
